SynProdGITV1/force-app/main/default/objects/Visit_Opportunity_Link__c/Visit_Opportunity_Link__c.object-meta.xml
<CustomObject>
    <label>Visit Opportunity Link</label>
    <nameField>
        <label>Visit Opportunity Link Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Visit Opportunity Links</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>