SynProdGITV1/force-app/main/default/objects/Visit_Opportunity_Link__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Visit Opportunity Links</relationshipLabel>
    <relationshipName>Visit_Opportunity_Links</relationshipName>
    <type>Lookup</type>
</CustomField>