SynProdGITV1/force-app/main/default/objects/Visit_Opportunity_Link__c/fields/Visit_Id__c.field-meta.xml
<CustomField>
    <fullName>Visit_Id__c</fullName>
    <label>Visit Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>