SynProdGITV1/force-app/main/default/objects/Visit_Opportunity_Link__c/fields/Visit_Link__c.field-meta.xml
<CustomField>
    <fullName>Visit_Link__c</fullName>
    <label>Visit Link</label>
    <type>Url</type>
</CustomField>